compiler/testData/diagnostics/tests/controlFlowAnalysis/deadCode/deadCodeInReturn.kt
fun testReturn() {
    <!UNREACHABLE_CODE!>return<!> todo()
}

fun todo() = throw Exception()